--- a/nbs/session3_inclass_ads.ipynb
+++ b/nbs/session3_inclass_ads.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "spacy.tokens.doc.Doc"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -170,11 +170,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 My PRON poss Number=Sing|Person=1|Poss=Yes|PronType=Prs\n",
+      "1 name NOUN nsubj Number=Sing\n",
+      "2 is AUX ROOT Mood=Ind|Number=Sing|Person=3|Tense=Pres|VerbForm=Fin\n",
+      "3 Anton PROPN attr Number=Sing\n",
+      "4 and CCONJ cc ConjType=Cmp\n",
+      "5 I PRON nsubj Case=Nom|Number=Sing|Person=1|PronType=Prs\n",
+      "6 come VERB conj Tense=Pres|VerbForm=Fin\n",
+      "7 from ADP prep \n",
+      "8 Denmark PROPN pobj Number=Sing\n",
+      "9 . PUNCT punct PunctType=Peri\n"
+     ]
+    }
+   ],
    "source": [
-    "# find parts-of-speech and grammatical relations"
+    "\n",
+    "# find parts-of-speech and grammatical relations\n",
+    "for token in doc: \n",
+    "    print(token.i, token.text, token.pos_, token.dep_, token.morph)"
    ]
   },
   {
@@ -188,11 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anton PERSON\n",
+      "Denmark GPE\n"
+     ]
+    }
+   ],
    "source": [
-    "# extracting NERs"
+    "# extracting NERs\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
    ]
   },
   {
@@ -221,29 +252,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load a text file"
+    "# load a text file\n",
+    "import os \n",
+    "filename = os.path.join(\"..\", \"data\", \"example.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a doc object"
+    "with open(filename, \"r\", encoding=\"utf-8\") as file: \n",
+    "    text = file.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# count number of adjectives"
+    "# create a doc object\n",
+    "doc = nlp(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create empty list\n",
+    "entities = []\n",
+    "\n",
+    "# get named entities\n",
+    "for ent in doc.ents: \n",
+    "    entities.append(ent.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Japanese', '2,000', 'Team Jorge', 'Netherlands', 'Russian', 'Tuesday', 'Twitter two days later', 'Mexico', 'British', 'Tottenham Hotspur', 'Twitter', 'Van Rooijen', 'Senegal', 'Twitter, Facebook, Gmail', '25', 'Morocco', 'the Daily Mail', 'Sheffield', 'LinkedIn', 'Advanced Impact Media Solutions', 'California', 'ICO', '18 October 2020', 'Regent Street', 'Amazon', 'Team Jorge’s Aims', 'more than 30,000', 'PPE', 'Hanan', 'Ecuador', 'India', '04.00 GMT', 'Manisha Ganguly', 'Gmail', 'Three', 'Le Monde', 'two', 'London', 'YouTube', 'Greece', 'Guardian', 'one', '30,000', 'Guardian Design/Haaretz/TheMarker/Radio France', 'Zimbabwe', 'Liz Truss', 'Belarus', 'Germany', 'the United Arab Emirates', '2019', 'Monaco', 'Dutch', 'Yorkshire', 'Instagram', 'Information Commissioner’s Office', 'BBC', 'Telegram', 'US', '#MeToo', 'Canaelan', 'Meta', 'Switzerland', 'One', 'Airbnb', 'weekly', 'this week', 'tens of thousands', 'Taylor Swift', 'Jorge', 'Alexander', 'Tom Van Rooijen', 'Facebook', 'Tal Hanan', 'France', 'Wiltshire', 'multimillion-pound', 'the Eiffel Tower', 'about 20', 'Israel', 'Glastonbury', 'Telegraph', 'first', 'Canada', 'Spanish', 'Panama', 'Israeli', 'French', 'UN', 'Paris', 'UK', 'Qatari', 'Der Spiegel', 'Haaretz'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(entities)) # all unique objects "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "114\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count number of adjectives\n",
+    "adjective_count = 0 \n",
+    "\n",
+    "for token in doc: \n",
+    "    if token.pos_ == \"ADJ\":\n",
+    "        adjective_count += 1\n",
+    "\n",
+    "print(adjective_count)"
    ]
   },
   {
@@ -255,11 +345,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find the relative frequency per 10,000 words"
+    "# find the relative frequency per 10,000 words\n",
+    "relative_freq = (adjective_count/len(doc))* 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "682.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(relative_freq, 2))"
    ]
   },
   {
@@ -280,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +397,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create spaCy doc"
+    "# create spaCy doc\n",
+    "# a single sentence example\n",
+    "input_string = \"My name is Anton and I come from Denmark.\"\n",
+    "\n",
+    "# create a new Doc object (spacy DOCs are complex objects)\n",
+    "doc = nlp(input_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotations = []\n",
+    "\n",
+    "for token in doc: \n",
+    "    annotations.append((token.text, token.pos_)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spaCy doc to pandas dataframe\n",
+    "data = pd.DataFrame(annotations, columns=[\"tokens\", \"pos\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>My</td>\n",
+       "      <td>PRON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>name</td>\n",
+       "      <td>NOUN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>is</td>\n",
+       "      <td>AUX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anton</td>\n",
+       "      <td>PROPN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>and</td>\n",
+       "      <td>CCONJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I</td>\n",
+       "      <td>PRON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>come</td>\n",
+       "      <td>VERB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>from</td>\n",
+       "      <td>ADP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>PROPN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>.</td>\n",
+       "      <td>PUNCT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    tokens    pos\n",
+       "0       My   PRON\n",
+       "1     name   NOUN\n",
+       "2       is    AUX\n",
+       "3    Anton  PROPN\n",
+       "4      and  CCONJ\n",
+       "5        I   PRON\n",
+       "6     come   VERB\n",
+       "7     from    ADP\n",
+       "8  Denmark  PROPN\n",
+       "9        .  PUNCT"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -302,16 +545,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# spaCy doc to pandas dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save dataframe"
+    "# save dataframe\n",
+    "outpath = os.path.join(\"..\", \"out\", \"annotations.csv\")\n",
+    "data.to_csv(outpath)\n"
    ]
   },
   {
