--- a/nbs/session08_inclass_ads.ipynb
+++ b/nbs/session08_inclass_ads.ipynb
@@ -17,8 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-22 10:05:55.326793: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2023-03-26 11:14:58.489822: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-03-26 11:15:00.458337: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-03-26 11:15:00.461068: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-26 11:15:09.436315: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_headlines = []\n",
     "for filename in os.listdir(data_dir):\n",
-    "    if 'Articles' in filename:\n",
+    "    if 'Comment' in filename:\n",
     "        article_df = pd.read_csv(data_dir + \"/\" + filename)\n",
-    "        all_headlines.extend(list(article_df[\"headline\"].values))"
+    "        all_headlines.extend(list(article_df[\"commentBody\"].values))"
    ]
   },
   {
@@ -174,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8603"
+       "2176364"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,25 +206,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['my beijing the sacred city',\n",
-       " '6 million riders a day 1930s technology',\n",
-       " 'seeking a crossborder conference',\n",
-       " 'questions for despite the yuck factor leeches are big in russian medicine',\n",
-       " 'who is a criminal',\n",
-       " 'an antidote to europes populism',\n",
-       " 'the cost of a speech',\n",
-       " 'degradation of the language',\n",
-       " 'on the power of being awful',\n",
-       " 'trump garbles pitch on a revised health bill']"
+       "['for all you americans out there  still rejoicing over the majority win of  republicans over the legislature of this landbrbewarebrjust like you would have been if  there were any other kind of majoritybrthe founding fathers had something like this in mind wheh they formed our great nationbrits part of the natural checks amp balances system that keeps this country on an even keelbrbut this is now being threatened  with the majority of executive legislative and judidical power all in the hands of one political partybrsee to it that you remember our us constitution and our bill of rightsbrremember that we are still the peoplebramerica belongs to all of usbrand god help us all',\n",
+       " 'obamas policies may prove to be the least of this countrys worries  the gop has been emboldened to actually cut the oce in the night before the new president or congress is sworn in following in their leaders footsteps  everyone is crying foul including the gop leadership and conservative think tanks  how about a twitter regarding the swamp draining tonight',\n",
+       " 'democrats are comprised of malcontents who generally have never worked a day in their lives and thrive on handouts from the govt fire  12 of the govt non workers and save billions trust is earned and our elected officials have not earned our trust the dont adhere to the us constitution as it restricts their movement thank goodness for the 2nd amendment and the nra or they would have already enslaved us',\n",
+       " 'the picture in this article is the face of congressional leadership it would seem that only harry reid seemed to know that his time has passed conversely so should mitch mcconnell his times has come and gone he forces people his own age to retire while he goes on being a senatorbrbrthe senators ideas and ways of thinking are no longer mainstream he hasnt the political will or the intestinal fortitude that it will take to keep his president from running this country into the ground its time that our elected representatives have term limits imposed mitch mcconnell was raised in a white mans world where women were excluded even though he never throughly supported trump yet his wife gets a cabinet appointment the gop leadership lead by mcconnell strips down the only department that makes any real sense was the independent ethics board under the guise of how much better how much more stream line the ethics complaints will be handled essentially setting it up for their president to enrich himself as he always had and does only no ethics rules wont apply anymore more and more this isnt a country by the people and for the people no its becoming a country of the have and have nots and us being the have nots will shortly have lots lessbrbrthe democrats would be right in using  the emolument clause and the constitutional issues trump will bring against the gop offer them as much help as they offered obama and by extension us the citizens of this country',\n",
+       " 'elections have consequences',\n",
+       " ' shakespeare showed us that  appetite brings  its own revenge as ambition   chokes on its own excess and  consumes itself in the process ',\n",
+       " 'obama policies are in peril as new congress takes overbrbrgod is good these days',\n",
+       " 'im glad to hear the republicans are chomping at the bit to pass republican legislation  would that be like nixons call for for a basic minimum  income no i didnt say minimum wage i said living yearly income like nixon said  an amount that would guarantee all citizens of enough money to live modestly  or maybe it would be like gop romneycare in massachusetts that was passed long before obamacare which was in most ways modeled upon it  butoh thats right those things were put forth by another earlier republican party  sort of like the much earlier republican party that rejected slavery and wanted equality for all its citizens after the civil war',\n",
+       " 'a typical banana republic deal',\n",
+       " 'well mitch you havent done anything for eight years so you should be rested']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,25 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[46, 1601],\n",
-       " [46, 1601, 1],\n",
-       " [46, 1601, 1, 1951],\n",
-       " [46, 1601, 1, 1951, 120],\n",
-       " [122, 331],\n",
-       " [122, 331, 1952],\n",
-       " [122, 331, 1952, 2],\n",
-       " [122, 331, 1952, 2, 125],\n",
-       " [122, 331, 1952, 2, 125, 2484],\n",
-       " [122, 331, 1952, 2, 125, 2484, 812]]"
+       "[[9, 32],\n",
+       " [9, 32, 21],\n",
+       " [9, 32, 21, 162],\n",
+       " [9, 32, 21, 162, 57],\n",
+       " [9, 32, 21, 162, 57, 52],\n",
+       " [9, 32, 21, 162, 57, 52, 138],\n",
+       " [9, 32, 21, 162, 57, 52, 138, 23649],\n",
+       " [9, 32, 21, 162, 57, 52, 138, 23649, 104],\n",
+       " [9, 32, 21, 162, 57, 52, 138, 23649, 104, 1],\n",
+       " [9, 32, 21, 162, 57, 52, 138, 23649, 104, 1, 385]]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,11 +298,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictors, label, max_sequence_len = generate_padded_sequences(inp_sequences) # we pad by adding 0s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(51770, 11265)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(label.shape)"
    ]
   },
   {
