--- a/nbs/session09_inclass_rdkm.ipynb
+++ b/nbs/session09_inclass_rdkm.ipynb
@@ -666,8 +666,7 @@
       "mimetype": "text/x-python",
       "name": "python",
       "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.2"
+      "pygments_lexer": "ipython3"
     },
     "vscode": {
       "interpreter": {
